<resources>
    <string name="app_name">MyProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Добро пожаловать!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="next">NEXT</string>
    <string name="fragment_2">Fragment 2</string>
    <string name="fragment_3">Fragment 3</string>
    <string name="fragment_4">Fragment 4</string>
    <string name="fragmen_5">Fragmen 5</string>
    <string name="f1">f1</string>
    <string name="f2">f2</string>
    <string name="f3">f3</string>
    <string name="f4">f4</string>
    <string name="f5">f5</string>
</resources>