<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fragment_conteiner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/line1"
        android:layout_marginBottom="16dp"
        />

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:weightSum="5"
        >
        <Button
            android:text="@string/f1"
            android:id="@+id/f1"
            style="@style/button"
            android:onClick="click1"/>
        <Button
            android:text="@string/f2"
            android:id="@+id/f2"
            style="@style/button"
            android:onClick="click2"/>
        <Button
            android:text="@string/f3"
            android:id="@+id/f3"
            style="@style/button"
            android:onClick="click3"/>
        <Button
            android:text="@string/f4"
            android:id="@+id/f4"
            style="@style/button"
            android:onClick="click4"/>
        <Button
            android:text="@string/f5"
            android:id="@+id/f5"
            style="@style/button"
            android:onClick="click5"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>